--- a/project/affinity-flight/Affinity_Flight_V7.html
+++ b/project/affinity-flight/Affinity_Flight_V7.html
@@ -11,10 +11,10 @@
 <head>
 <meta charset="UTF-8">
 <meta name="authoring-tool" content="Adobe_Animate_CC">
-<title>Affinity Flight_V7</title>
+<title>Affinity_Flight_V7</title>
 <!-- write your code here -->
 <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
-<script src="Affinity Flight_V7.js?1670555250412"></script>
+<script src="Affinity_Flight_V7.js?1670555250412"></script>
 <script>
 var canvas, stage, exportRoot, anim_container, dom_overlay_container, fnStartAnimation;
 function init() {
@@ -70,4 +70,5 @@ function playSound(id, loop, offset) {
 		</div>
 	</div>
 </body>
+
 </html>
