--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
               <p class="ptext" style="margin:12px 0 0"><em>Note:</em> Professional product overview videos and customer training materials available for review upon request.</p>
               <div style="margin-top:16px">
                 <button class="btn" id="launchAffinityBtn" type="button">Launch Interactive Animation</button>
-                <a href="./assets/Digital_Media_Design_Print_Portfolio.pdf" class="btn ghost" style="margin-left:8px" download>View Full Design Portfolio (PDF)</a>
+                <a href="./assets/Digital_Media_Design_Print_Portfolio.pdf" class="btn ghost" style="margin-left:8px" download>View Academic Design Portfolio (PDF)</a>
               </div>
             </div>
           </article>
@@ -650,4 +650,5 @@
     });
   </script>
 </body>
+
 </html>
